<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutOuter"
        android:layout_width="389dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="389dp"
            android:layout_height="68dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Comparison Settings"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="396dp"
            android:layout_height="58dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Commute"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_commute_time_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="390dp"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Salary"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_yearly_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="397dp"
            android:layout_height="62dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="201dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Bonus"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_yearly_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="387dp"
            android:layout_height="83dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Retirement Benefits"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_retirement_benefits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="394dp"
            android:layout_height="66dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="201dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Leave Time"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_leave_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout15"
            android:layout_width="388dp"
            android:layout_height="71dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12"></LinearLayout>

        <LinearLayout
            android:layout_width="388dp"
            android:layout_height="83dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveComparisonSettings"
                android:text="Save" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelComparisonSettings"
                android:text="Cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>