...
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:onClick="handleCompareOffers"
        android:text="Compare Jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ComparisonSettings" />

    <Button
        android:id="@+id/EnterJobDetails"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
...
